[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = wsynphot
description = Synthetic photometry package
long_description = Calculate synthetic photometry from spectra and all sorts of other things
author = StarKit collaboration
author_email = wkerzendorf@gmail.com
license = BSD
url = http://wsynphot.rtfd.io
edit_on_github = False
github_project = starkit/wsynphot
